--- a/index.html
+++ b/index.html
@@ -4,7 +4,109 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Homework 1</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <a href=""><span>Web</span>Studio</a>
+      <nav>
+        <ul>
+          <li><a href="">Студія</a></li>
+          <li><a href="">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
+        </ul>
+      </nav>
+      <section>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> <br />
+      </section>
+    </header>
+    <main>
+      <article>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </article>
+      <section>
+        <ul>
+          <li>
+            <dl>
+              <dt>УВАГА ДО ДЕТАЛЕЙ</dt>
+              <dd>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>ПУНКТУАЛЬНІСТЬ</dt>
+              <dd>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>ПЛАНУВАННЯ</dt>
+              <dd>Так само консультація з широким активом значною мірою зумовлює.</dd>
+            </dl>
+          </li>
+          <li>
+            <dl>
+              <dt>СУЧАСНІ ТЕХНОЛОГІЇ</dt>
+              <dd>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</dd>
+            </dl>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li>
+            <img src="images/codding.jpg" alt="Writing code" width="370" height="294" />
+          </li>
+          <li>
+            <img src="images/phone.jpg" alt="Finding a solution" width="370" height="294" />
+          </li>
+          <li>
+            <img src="images/tablet.jpg" alt="Choose color" width="370" height="294" />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Наша команда</h2>
+        <article>
+          <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+          <dl>
+            <dt>Ігор Дем'яненко</dt>
+            <dd>Product Designer</dd>
+          </dl>
+        </article>
+        <article>
+          <img src="images/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+          <dl>
+            <dt>Ольга Рєпіна</dt>
+            <dd>Frontend Developer</dd>
+          </dl>
+        </article>
+        <article>
+          <img src="images/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
+          <dl>
+            <dt>Микола Тарасов</dt>
+            <dd>Marketing</dd>
+          </dl>
+        </article>
+        <article>
+          <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+          <dl>
+            <dt>Михайло Єрмаков</dt>
+            <dd>UI Designer</dd>
+          </dl>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <a href=""><span>Web</span>Studio</a>
+      <address>
+        м. Київ, пр-т Лесі Українки, 26 <br />
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
+        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> <br />
+      </address>
+    </footer>
+  </body>
 </html>
