--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <section>
+      <div>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> <br />
-      </section>
+        <a href="tel:+380961111111">+38 096 111 11 11</a> <br />
+      </div>
     </header>
     <main>
       <article>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </article>
-      <section>
+      <div>
         <ul>
           <li>
             <dl>
@@ -53,7 +53,7 @@
             </dl>
           </li>
         </ul>
-      </section>
+      </div>
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
@@ -70,34 +70,36 @@
       </section>
       <section>
         <h2>Наша команда</h2>
-        <article>
-          <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-          <dl>
-            <dt>Ігор Дем'яненко</dt>
-            <dd>Product Designer</dd>
-          </dl>
-        </article>
-        <article>
-          <img src="images/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-          <dl>
-            <dt>Ольга Рєпіна</dt>
-            <dd>Frontend Developer</dd>
-          </dl>
-        </article>
-        <article>
-          <img src="images/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
-          <dl>
-            <dt>Микола Тарасов</dt>
-            <dd>Marketing</dd>
-          </dl>
-        </article>
-        <article>
-          <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-          <dl>
-            <dt>Михайло Єрмаков</dt>
-            <dd>UI Designer</dd>
-          </dl>
-        </article>
+        <ul>
+          <li>
+            <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
+            <dl>
+              <dt>Ігор Дем'яненко</dt>
+              <dd>Product Designer</dd>
+            </dl>
+          </li>
+          <li>
+            <img src="images/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
+            <dl>
+              <dt>Ольга Рєпіна</dt>
+              <dd>Frontend Developer</dd>
+            </dl>
+          </li>
+          <li>
+            <img src="images/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
+            <dl>
+              <dt>Микола Тарасов</dt>
+              <dd>Marketing</dd>
+            </dl>
+          </li>
+          <li>
+            <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
+            <dl>
+              <dt>Михайло Єрмаков</dt>
+              <dd>UI Designer</dd>
+            </dl>
+          </li>
+        </ul>
       </section>
     </main>
     <footer>
@@ -105,7 +107,7 @@
       <address>
         м. Київ, пр-т Лесі Українки, 26 <br />
         <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="tel:+38 096 111 11 11">+38 096 111 11 11</a> <br />
+        <a href="tel:+380961111111">+38 096 111 11 11</a> <br />
       </address>
     </footer>
   </body>
