--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       </div>
     </header>
     <main>
-      <article>
+      <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
-      </article>
+      </section>
       <div>
         <ul>
           <li>
