--- a/index.html
+++ b/index.html
@@ -30,22 +30,16 @@
       <div>
         <ul>
           <li>
-            <dl>
-              <dt>УВАГА ДО ДЕТАЛЕЙ</dt>
-              <dd>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</dd>
-            </dl>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <dl>
-              <dt>ПУНКТУАЛЬНІСТЬ</dt>
-              <dd>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</dd>
-            </dl>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <dl>
-              <dt>ПЛАНУВАННЯ</dt>
-              <dd>Так само консультація з широким активом значною мірою зумовлює.</dd>
-            </dl>
+            <h3>ПЛАНУВАННЯ</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
             <dl>
