--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button type="button">Замовити послугу</button>
       </section>
-      <div>
+      <section>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -48,7 +48,7 @@
             </dl>
           </li>
         </ul>
-      </div>
+      </section>
       <section>
         <h2>Чим ми займаємося</h2>
         <ul>
