--- a/index.html
+++ b/index.html
@@ -68,31 +68,23 @@
         <ul>
           <li>
             <img src="images/ihor.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-            <dl>
-              <dt>Ігор Дем'яненко</dt>
-              <dd>Product Designer</dd>
-            </dl>
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
           </li>
           <li>
             <img src="images/olga.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-            <dl>
-              <dt>Ольга Рєпіна</dt>
-              <dd>Frontend Developer</dd>
-            </dl>
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="images/mikola.jpg" alt="Микола Тарасов" width="270" height="260" />
-            <dl>
-              <dt>Микола Тарасов</dt>
-              <dd>Marketing</dd>
-            </dl>
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
           </li>
           <li>
             <img src="images/mihailo.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-            <dl>
-              <dt>Михайло Єрмаков</dt>
-              <dd>UI Designer</dd>
-            </dl>
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
