--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Наші переваги</h2>
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -92,9 +93,23 @@
     <footer>
       <a href=""><span>Web</span>Studio</a>
       <address>
-        м. Київ, пр-т Лесі Українки, 26 <br />
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a> <br />
-        <a href="tel:+380961111111">+38 096 111 11 11</a> <br />
+        <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/qrpCz5nqf4nP3WyB6"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              м. Київ, пр-т Лесі Українки, 26
+            </a>
+          </li>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
     </footer>
   </body>
