--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <dl>
-              <dt>СУЧАСНІ ТЕХНОЛОГІЇ</dt>
-              <dd>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</dd>
-            </dl>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
